plugins {
  id 'java'
  id 'io.quarkus'
}

repositories {
  mavenLocal()
  mavenCentral()
}

dependencies {
  implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
  implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-amazon-services-bom:${quarkusPlatformVersion}")

  implementation 'io.quarkiverse.amazonservices:quarkus-amazon-dynamodb-enhanced'
  implementation 'io.quarkus:quarkus-amazon-lambda'
  implementation 'io.quarkus:quarkus-arc'
  implementation 'io.quarkus:quarkus-hibernate-validator'
  
  implementation 'software.amazon.awssdk:url-connection-client'

  testImplementation 'io.quarkus:quarkus-junit5'
  testImplementation 'io.quarkus:quarkus-junit5-mockito'
  testImplementation 'io.rest-assured:rest-assured'
  testImplementation 'org.testcontainers:localstack'
}

group = 'org.acme'
version = '26.01.1'

java {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21
}

test {
  systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
  jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}

compileJava {
  options.encoding = 'UTF-8'
  options.compilerArgs << '-parameters'
}

compileTestJava {
  options.encoding = 'UTF-8'
}
